--- a/TheWorld/Views/App/Index.cshtml
+++ b/TheWorld/Views/App/Index.cshtml
@@ -3,32 +3,9 @@
     ViewBag.Title = "Home page";
 }
 <div class="row">
-    <div class="col-md-6">
-        <h1>The World</h1>
-        <p>This wil be a fun website soon!!</p>
-        <form>
-            <div class="form-group">
-                <label>Date</label>
-                <input class="form-control" />
-            </div>
-            <div class="form-group">
-                <label>Location</label>
-                <input class="form-control" />
-            </div>
-            <div>
-                <input type="submit" value="Add" class="btn btn-success" />
-            </div>
-        </form>
-    </div>
-    <div class="col-md-6">
-        <h2>The Map</h2>
-        <ul>
-            @foreach (var item in Model)
-            {
-                <li>
-                    @item.Name : @item.DateCreated.ToString("d")
-                </li>
-            }
-        </ul>
+    <div class="col-md-12">
+        <h1>Welcome to the World</h1>
+        <p>This application will allow you to plan for world trips</p>
+        <a asp-controller="App" asp-action="trips" class="btn btn-lg btn-success">View my trips</a>
     </div>
 </div>
