--- a/TheWorld/Views/Shared/_Layout.cshtml
+++ b/TheWorld/Views/Shared/_Layout.cshtml
@@ -13,8 +13,11 @@
 </head>
 <body>
     <div id="sidebar">
-        <img src="~/img/user1.jpg" alt="headshot" class="headshot" />
-        <span id="username">William Smith</span>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <img src="~/img/user1.jpg" alt="headshot" class="headshot" />
+            <span id="username">@User.Identity.Name</span>
+        }
         <ul class="nav">
             <li class="active">
                 <a asp-controller="App" asp-action="Index">Home</a>
@@ -25,6 +28,15 @@
             <li>
                 <a asp-controller="App" asp-action="Contact">Contact</a>
             </li>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <li>
+                    <a asp-controller="App" asp-action="Trips">Trips</a>
+                </li>
+                <li>
+                    <a asp-controller="Auth" asp-action="Logout">Logout</a>
+                </li>
+            }
         </ul>
     </div>
     <div id="wrapper">
