--- a/TheWorld/Views/App/Trips.cshtml
+++ b/TheWorld/Views/App/Trips.cshtml
@@ -8,56 +8,62 @@
     <script src="~/js/app-trips.js" type="text/javascript"></script>
     <script src="~/js/tripsController.js" type="text/javascript"></script>
 }
-<div class="row" ng-app="app-trips">
-    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
-        <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
-        <wait-cursor ng-show="true">
-        </wait-cursor>
-        <table class="table table-responsive table-striped">
-            <tr ng-repeat="trip in vm.trips">
-                <td>{{ trip.name }}</td>
-                <td>{{ trip.created | date:'MM-dd-yyyy' }}</td>
-                <td><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
-            </tr>
-        </table>
-        <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
-            <div class="form-group">
-                <label for="name">Trip Name</label>
-                <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name" required ng-minlength="5"/>
-                <span ng-show="newTripForm.name.$error.required" class="text-warning">Name is required</span>
-                <span ng-show="newTripForm.name.$error.minlength" class="text-warning">Must be at least 5 characters</span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Add" class="btn btn-success btn-sm" ng-disabled="newTripForm.$invalid"/>
-            </div>
-        </form>
-    </div>
-    <div class="col-md-6">
-        <h1>The World</h1>
-        <p>This wil be a fun website soon!!</p>
-        <form>
-            <div class="form-group">
-                <label>Date</label>
-                <input class="form-control"/>
-            </div>
-            <div class="form-group">
-                <label>Location</label>
-                <input class="form-control"/>
-            </div>
-            <div>
-                <input type="submit" value="Add" class="btn btn-success"/>
-            </div>
-        </form>
-    </div>
-    <div class="col-md-6">
-        <h2>The Map</h2>
-        <ul>
-            @foreach (var item in Model)
-            {
-                <li>
-                    @item.Name : @item.DateCreated.ToString("d")
-                </li>
-            }
-        </ul>
+<div>
+    <div id="App2">
+
+        <w3-test-directive></w3-test-directive>
+
     </div>
 </div>
+    <div class="row" ng-app="app-trips">
+        <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
+            <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
+            @*<wait-cursor ng-show="true"></wait-cursor>*@
+            <table class="table table-responsive table-striped">
+                <tr ng-repeat="trip in vm.trips">
+                    <td>{{ trip.name }}</td>
+                    <td>{{ trip.created | date:'MM-dd-yyyy' }}</td>
+                    <td><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
+                </tr>
+            </table>
+            <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
+                <div class="form-group">
+                    <label for="name">Trip Name</label>
+                    <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name" required ng-minlength="5" />
+                    <span ng-show="newTripForm.name.$error.required" class="text-warning">Name is required</span>
+                    <span ng-show="newTripForm.name.$error.minlength" class="text-warning">Must be at least 5 characters</span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Add" class="btn btn-success btn-sm" ng-disabled="newTripForm.$invalid" />
+                </div>
+            </form>
+        </div>
+        <div class="col-md-6">
+            <h1>The World</h1>
+            <p>This wil be a fun website soon!!</p>
+            <form>
+                <div class="form-group">
+                    <label>Date</label>
+                    <input class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Location</label>
+                    <input class="form-control" />
+                </div>
+                <div>
+                    <input type="submit" value="Add" class="btn btn-success" />
+                </div>
+            </form>
+        </div>
+        <div class="col-md-6">
+            <h2>The Map</h2>
+            <ul>
+                @foreach (var item in Model)
+            {
+                    <li>
+                        @item.Name : @item.DateCreated.ToString("d")
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
