--- a/TheWorld/Views/App/Trips.cshtml
+++ b/TheWorld/Views/App/Trips.cshtml
@@ -11,7 +11,7 @@
     <div class="row" ng-app="app-trips">
         <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
             <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
-            <wait-cursor ng-show="vm.isBusy"></wait-cursor>
+            <wait-cursor display-when="vm.isBusy"></wait-cursor>
             <table class="table table-responsive table-striped">
                 <tr ng-repeat="trip in vm.trips">
                     <td>{{ trip.name }}</td>
