--- a/TheWorld/Views/App/Trips.cshtml
+++ b/TheWorld/Views/App/Trips.cshtml
@@ -7,12 +7,20 @@
     <script src="~/lib/angular-route/angular-route.min.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key="></script>
     <script src="~/lib/gmaps/gmaps.min.js"></script>
-    <script src="~/js/simpleControls.js"></script>
-    <script src="~/js/app-trips.js"></script>
-    <script src="~/js/tripsController.js"></script>
-    <script src="~/js/tripEditorController.js"></script>
     <script src="~/lib/travelmap/travelmap.min.js"></script>
-}
+
+    <environment Names="Development">
+        <script src="~/js/simpleControls.js"></script>
+        <script src="~/js/app-trips.js"></script>
+        <script src="~/js/tripsController.js"></script>
+        <script src="~/js/tripEditorController.js"></script>
+    </environment>
+    <environment Names="Production,Staging">
+        <script src="~/lib/_app/simpleControls.js"></script>
+        <script src="~/lib/_app/app-trips.js"></script>
+        <script src="~/lib/_app/tripsController.js"></script>
+        <script src="~/lib/_app/tripEditorController.js"></script>
+    </environment>}
 <div class="row" ng-app="app-trips">
     <div ng-view></div>
 </div>
